Bug 278041 - creator window with no project crashes when closed
Summary: creator window with no project crashes when closed
Status: RESOLVED FIXED
Alias: None
Product: gluon
Classification: Unmaintained
Component: gluoncreator (other bugs)
Version First Reported In: Electron(alpha 2)
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Arjen Hiemstra
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-18 18:42 UTC by Ashwin Rajeev
Modified: 2011-07-18 18:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ashwin Rajeev 2011-07-18 18:42:17 UTC
Version:           Electron(alpha 2) (using KDE 4.6.4) 
OS:                Linux

If no project is open in gluon creator,then closing the mainwindow results in crash

Reproducible: Always

Steps to Reproduce:
open gluon creator
close project window(press Esc)
close mainwindow

Actual Results:  
kde crash handler reports that gluon creator closes unexpectedly

Expected Results:  
close perfectly

Application: Gluon Creator (gluoncreator), signal: Segmentation fault
[Current thread is 1 (Thread 0xb783e720 (LWP 4401))]

Thread 2 (Thread 0xb510ab70 (LWP 4402)):
#0  0x004a3416 in __kernel_vsyscall ()
#1  0x01d34f76 in poll () from /lib/i386-linux-gnu/libc.so.6
#2  0x05e0484b in g_poll () from /lib/i386-linux-gnu/libglib-2.0.so.0
#3  0x05df41af in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#4  0x05df4524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#5  0x00626577 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#6  0x005f8289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#7  0x005f8522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#8  0x005022a0 in QThread::exec() () from /usr/lib/libQtCore.so.4
#9  0x005d9fdb in ?? () from /usr/lib/libQtCore.so.4
#10 0x00504da2 in ?? () from /usr/lib/libQtCore.so.4
#11 0x00777e99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#12 0x01d4373e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb783e720 (LWP 4401)):
[KCrash Handler]
#7  0x001ed6dd in GluonEngine::Scene::sceneContents() () from /usr/lib/libGluonEngine.so.0.72.0
#8  0x001f1f11 in GluonEngine::Game::cleanupAll() () from /usr/lib/libGluonEngine.so.0.72.0
#9  0x080542bf in GluonCreator::MainWindow::~MainWindow() ()
#10 0x08054432 in GluonCreator::MainWindow::~MainWindow() ()
#11 0x0060bbc5 in qDeleteInEventHandler(QObject*) () from /usr/lib/libQtCore.so.4
#12 0x0060e3e8 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#13 0x00ebeb62 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#14 0x012d0527 in QMainWindow::event(QEvent*) () from /usr/lib/libQtGui.so.4
#15 0x01a761ec in KMainWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#16 0x01ab6a8f in KXmlGuiWindow::event(QEvent*) () from /usr/lib/libkdeui.so.5
#17 0x00e66d24 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#18 0x00e6b97b in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#19 0x0199b32a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#20 0x005f90bb in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#21 0x005fcc79 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#22 0x005fce0d in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#23 0x006263c4 in ?? () from /usr/lib/libQtCore.so.4
#24 0x05df3aa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#25 0x05df4270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#26 0x05df4524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#27 0x0062653c in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#28 0x00f1d1e5 in ?? () from /usr/lib/libQtGui.so.4
#29 0x005f8289 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#30 0x005f8522 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#31 0x005fcecc in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#32 0x00e648e7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#33 0x080534fe in main ()
Comment 1 Laszlo Papp 2011-07-18 18:49:16 UTC
Git commit 6c5025683e14d2461101fead552a714eafefbc63 by Laszlo Papp.
Committed on 18/07/2011 at 20:48.
Pushed by lpapp into branch 'master'.

Do not clean up the current scene if it is null (ie.: without project)

BUG: 278041

M  +3    -1    creator/mainwindow.cpp

http://commits.kde.org/gluon/6c5025683e14d2461101fead552a714eafefbc63