Do not clean up the current scene if it is null (ie.: without project)

BUG: 278041